--- a/templates/components/chat/head_scripts.html
+++ b/templates/components/chat/head_scripts.html
@@ -30,7 +30,11 @@
   hljs.configure({ ignoreUnescapedHTML: true });
 
   // Configure marked.js
-  marked.setOptions({
+  marked.use({
+    mangle: false,
+    headerIds: false,
+    breaks: true,
+    gfm: true,
     highlight: function(code, lang) {
       if (lang && hljs.getLanguage(lang)) {
         try {
@@ -38,8 +42,10 @@
         } catch (__) {}
       }
       return code;
-    },
-    breaks: true,
-    gfm: true
+    }
   });
+
+  // Test marked initialization
+  console.log("Marked version:", marked.version);
+  console.log("Test markdown conversion:", marked.parse("**bold** and *italic*"));
 </script>
