--- a/templates/layouts/chat_content.html
+++ b/templates/layouts/chat_content.html
@@ -1,1 +1,1 @@
-<div id="chat-messages" class="space-y-4">{% include "pages/chat.html" %}</div>
+<div id="chat-messages" class="text-xs space-y-4">{% include "pages/chat.html" %}</div>
