--- a/templates/components/chat/templates.html
+++ b/templates/components/chat/templates.html
@@ -5,7 +5,7 @@
       <div class="w-6 h-6 flex items-center justify-center"></div>
     </div>
     <div class="flex-grow">
-      <div class="mt-1 content prose prose-sm prose-custom-dark max-w-none"></div>
+      <div class="mt-1 content prose prose-xs prose-custom-dark max-w-none"></div>
       <div class="status text-xs text-gray-500 mt-1 hidden"></div>
     </div>
   </div>
