--- a/templates/components/chat/head_scripts.html
+++ b/templates/components/chat/head_scripts.html
@@ -35,19 +35,22 @@
     headerIds: false,
     breaks: true,
     gfm: true,
-    highlight: function(code, lang) {
+    highlight: function (code, lang) {
       if (lang && hljs.getLanguage(lang)) {
         try {
           return hljs.highlight(code, { language: lang }).value;
         } catch (__) {}
       }
       return code;
-    }
+    },
   });
 
   // Test marked initialization
   console.log("Marked version:", marked.version);
-  console.log("Test markdown conversion:", marked.parse("**bold** and *italic*"));
+  console.log(
+    "Test markdown conversion:",
+    marked.parse("**bold** and *italic*"),
+  );
 
   // Make marked available globally
   window.marked = marked;
