Fix markdown rendering in blog posts (#608)
* Update blog.html

* Update home.html

* Update routes.rs

* css

* Update blog.html

* Update routes.rs

* Update home.html

* Create file templates/blog_post.html

* format

* Update blog.html

* Update routes.rs

* Update lib.rs

* Update blog.html

* Update routes.rs

* Create file build.rs

* Update Cargo.toml

* Update blog.html

* Update filters.rs

* Update blog.html

* Update routes.rs

* Update Cargo.toml

* Update filters.rs

* Update blog.html

* Update routes.rs

* format

--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -84,18 +84,12 @@
   <div class="border border-white p-6">
     <h2 class="text-lg font-bold mb-6">Latest Updates</h2>
 
-    {% call blog::blog_post("January 16, 2025", "Repo Map Tool", "
-    <p>
-      We've released a small tool for generating a concise map of a GitHub repo,
-      optimized for LLM chats &amp; agents, using code from <a href=\"https://aider.chat\" target=\"_blank\" class=\"font-bold underline\">Aider</a>.
-      <a href=\"/repomap\" class=\"font-bold underline\">Try it here!</a>
-    </p>
-    ") %} {% call blog::blog_post("January 14, 2025", "New Website", "
-    <p>
-      We have a new website! It uses Rust, HTMX, and a new font Berkeley Mono
-      from the US Graphics Company, from which we also drew inspiration on
-      design.
-    </p>
-    ") %}
+    {% call blog::blog_post("January 16, 2025", "Repo Map Tool", "We've released
+    a small tool for generating a concise map of a GitHub repo, optimized for
+    LLM chats & agents, using code from [Aider](https://aider.chat). [Try it
+    here!](/repomap)") %} {% call blog::blog_post("January 14, 2025", "New
+    Website", "We have a new website! It uses Rust, HTMX, and a new font
+    Berkeley Mono from the US Graphics Company, from which we also drew
+    inspiration on design.") %}
   </div>
 </div>
