--- a/templates/layouts/chat_base.html
+++ b/templates/layouts/chat_base.html
@@ -26,9 +26,9 @@
       "components/chat/sidebar_right.html" %}
     </div>
 
-    {% include "components/chat/error_section.html" %}
-    {% include "components/chat/login_overlay.html" %}
-    {% include "components/chat/templates.html" %}
-    {% include "components/chat/websocket_scripts.html" %}
+    {% include "components/chat/error_section.html" %} {% include
+    "components/chat/login_overlay.html" %} {% include
+    "components/chat/templates.html" %} {% include
+    "components/chat/websocket_scripts.html" %}
   </body>
 </html>
