--- a/templates/pages/login.html
+++ b/templates/pages/login.html
@@ -1,5 +1,7 @@
 {% extends "layouts/base.html" %}
 
+{% block title %}{{ title }}{% endblock %}
+
 {% block content %}
 <div class="min-h-screen bg-gray-50 flex flex-col justify-center py-12 sm:px-6 lg:px-8">
   <div class="sm:mx-auto sm:w-full sm:max-w-md">
