--- a/assets/main.css
+++ b/assets/main.css
@@ -1380,6 +1380,10 @@ textarea:focus {
   pointer-events: none;
 }
 
+.visible {
+  visibility: visible;
+}
+
 .fixed {
   position: fixed;
 }
@@ -2037,6 +2041,10 @@ textarea:focus {
 
 .text-center {
   text-align: center;
+}
+
+.text-justify {
+  text-align: justify;
 }
 
 .align-middle {
